// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product renders successfully renders snapshot of product app 1`] = `
<Product
  handleProductRemove={[MockFunction]}
  position={1}
  product={
    Object {
      "category": "Category",
      "colour": "blue",
      "customers_initials": "CG",
      "id": 1,
      "product_name": "Nike Air Max 95",
      "size": "10",
      "status": "On the way",
    }
  }
>
  <styled.div
    data-test="product"
  >
    <div
      className="sc-AxjAm jMVGkZ"
      data-test="product"
    >
      <div
        aria-hidden="true"
        className="status-border status-On the way"
      />
      <img
        alt="Nike Air Max 95"
        className="shoe-thumbnail"
        height="100"
        src=""
        width="100"
      />
      <h2
        className="shoe-name"
      >
        Nike Air Max 95
      </h2>
      <div
        className="shoe-info"
      >
        Category:
        <br />
        <strong>
          Category
        </strong>
      </div>
      <div
        className="shoe-info"
      >
        Size:
        <br />
        <strong>
          10
        </strong>
      </div>
      <div
        className="shoe-info"
      >
        Colour:
        <br />
        <strong>
          blue
        </strong>
      </div>
      <div
        className="initials"
      >
        <strong>
          CG
        </strong>
      </div>
      <button
        className="btn btn-remove"
        onClick={[Function]}
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f057",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
              ],
              "iconName": "times-circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 "
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </FontAwesomeIcon>
      </button>
    </div>
  </styled.div>
</Product>
`;

exports[`Product renders successfully renders without crashing 1`] = `
Array [
  <styled.div
    data-test="product"
  >
    <div
      className="sc-AxjAm jMVGkZ"
      data-test="product"
    >
      <div
        aria-hidden="true"
        className="status-border status-On the way"
      />
      <img
        alt="Nike Air Max 95"
        className="shoe-thumbnail"
        height="100"
        src=""
        width="100"
      />
      <h2
        className="shoe-name"
      >
        Nike Air Max 95
      </h2>
      <div
        className="shoe-info"
      >
        Category:
        <br />
        <strong>
          Category
        </strong>
      </div>
      <div
        className="shoe-info"
      >
        Size:
        <br />
        <strong>
          10
        </strong>
      </div>
      <div
        className="shoe-info"
      >
        Colour:
        <br />
        <strong>
          blue
        </strong>
      </div>
      <div
        className="initials"
      >
        <strong>
          CG
        </strong>
      </div>
      <button
        className="btn btn-remove"
        onClick={[Function]}
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f057",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
              ],
              "iconName": "times-circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 "
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </FontAwesomeIcon>
      </button>
    </div>
  </styled.div>,
  <div
    className="sc-AxjAm jMVGkZ"
    data-test="product"
  >
    <div
      aria-hidden="true"
      className="status-border status-On the way"
    />
    <img
      alt="Nike Air Max 95"
      className="shoe-thumbnail"
      height="100"
      src=""
      width="100"
    />
    <h2
      className="shoe-name"
    >
      Nike Air Max 95
    </h2>
    <div
      className="shoe-info"
    >
      Category:
      <br />
      <strong>
        Category
      </strong>
    </div>
    <div
      className="shoe-info"
    >
      Size:
      <br />
      <strong>
        10
      </strong>
    </div>
    <div
      className="shoe-info"
    >
      Colour:
      <br />
      <strong>
        blue
      </strong>
    </div>
    <div
      className="initials"
    >
      <strong>
        CG
      </strong>
    </div>
    <button
      className="btn btn-remove"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f057",
              "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
            ],
            "iconName": "times-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times-circle fa-w-16 "
          data-icon="times-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </FontAwesomeIcon>
    </button>
  </div>,
]
`;
